--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
 	id 'org.springframework.boot' version '2.7.1'
 	id 'io.spring.dependency-management' version '1.0.11.RELEASE'
 	id 'java'
+	id 'org.liquibase.gradle' version '2.0.4'
 }
 
 group = 'com.sapient'
@@ -22,7 +23,11 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web',
 			'javax.validation:validation-api',
 			'io.swagger.core.v3:swagger-annotations:2.2.1',
-			'org.hibernate:hibernate-core:5.4.19.Final'
+			'org.hibernate:hibernate-core:5.4.19.Final',
+			'org.umlg:sqlg-cockroachdb:2.0.2',
+			'org.postgresql:postgresql:42.4.0'
+	liquibaseRuntime 'org.liquibase:liquibase-core:4.2.2'
+	liquibaseRuntime 'org.postgresql:postgresql'
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
@@ -31,3 +36,30 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+liquibase {
+	activities {
+		main {
+			changeLogFile "./liquibase/changelog.sql"
+			url "jdbc:postgresql://localhost:26257/defaultdb?sslmode=disable"
+			username "root"
+			password ""
+		}
+	}
+}
+
+task('deploy changeLog') {
+	doFirst(){
+		liquibase {
+			activities {
+				main {
+					changeLogFile System.properties.liquibaseChangeLogFile
+					contexts System.properties.liquibaseContexts
+				}
+			}
+		}
+	}
+}
+
+//update.dependsOn(deploy)
+
